--- a/index.html
+++ b/index.html
@@ -68,23 +68,24 @@
                     <button>Tabs</button>
                     <button>Teori</button>
                     <button>Videoer</button>
-                    <button>Legg til +</button>
+                    <button class="addCategory">Legg til +</button>
                 </nav>
             </section>
-
         </section>
+    
     </main>
+
     
     <footer>
-        <h4>Sosiale medier:</h4>
+        <h4>Sosiale medier</h4>
         <ul>
-            <li>Facebook</li>
-            <li>Instagram</li>
-            <li>Twitter</li>
-            <li>Snapchat</li>
-
+            <li><a href="https://www.facebook.com/">Facebook</a></li>
+            <li><a href="https://www.instagram.com/">Instagram</a></li>
+            <li><a href="https://twitter.com/">Twitter</a></li>
+            <li><a href="https://www.snapchat.com/">Snapchat</a></li>
         </ul>
     </footer>
+
 
 </body>
 
