--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <section class="bigFlexOne">
             <nav class="navSongs">
                 <ul>
-                    <li>Balance<!--ICON--></li>
+                    <li class="balanceLi">Balance <img src="./assets/trekantPil.png" alt="Trekantpil" class="triangelIcon"></li>
                     <li>Better Now</li>
                     <li>Fragments</li>
                     <li>Glasshouse</li>
