--- a/profile.html
+++ b/profile.html
@@ -20,7 +20,8 @@
         </div>
         <nav class="navTop">
             <ul class="navTopUl">
-                <li class="coversGrayBlack">Covere</li>
+                <!--Bare endre klasse for å bytte farge - Forskjellige varianter-->
+                <li class="coversGrayBlack bck-black">Covere</li>
                 <li class="minMusikkGrayBlack">Min musikk</li>
             </ul>
             <button class="profileButton">Profil
