--- a/covere.html
+++ b/covere.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage</title>
+    <title>Covere</title>
 
     <!--Link to css-->
     <link rel="stylesheet" href="css/reset.css">
@@ -21,12 +21,10 @@
         </div>
         <nav class="navTop">
             <ul class="navTopUl">
-                <li class="coversGrayBlack">Covere</li>
-                <li class="minMusikkGrayBlack">Min musikk</li>
+                <li class="coversLiA covereGray"><a href="./covere.html">Covere</a></li>
+                <li class="minMusikkLiA minMusikkBlack"><a href="./minmusikk.html">Min musikk</a></li>
             </ul>
-            <button class="profileButton">Profil
-                <!--ICON-->
-            </button>
+            <button class="profileButton"><a href="./profile.html">Profil</a><!--ICON--></button>
         </nav>
     </header>
 
@@ -34,7 +32,7 @@
         <section class="bigFlexOne">
             <nav class="navSongs">
                 <ul>
-                    <li class="balanceLi">Balance <img src="./assets/trekantPil.png" alt="Trekantpil" class="triangelIcon"></li>
+                    <li class="firstSongLi">Balance <img src="./assets/trekantPil.png" alt="Trekantpil" class="triangelIcon"></li>
                     <li>Better Now</li>
                     <li>Fragments</li>
                     <li>Glasshouse</li>
