--- a/profile.html
+++ b/profile.html
@@ -18,15 +18,12 @@
             <h1>GuitArchive</h1>
             <img src="./assets/guitarIcon.png" alt="Img of a guitar" class="guitarIcon">
         </div>
-        <nav class="navTop">
+        <nav class="navTop navTopBorder">
             <ul class="navTopUl">
-                <!--Bare endre klasse for å bytte farge - Forskjellige varianter-->
-                <li class="coversGrayBlack bck-black">Covere</li>
-                <li class="minMusikkGrayBlack">Min musikk</li>
+                <li class="coversLiA covereBlackBorder"><a href="./covere.html">Covere</a></li>
+                <li class="minMusikkLiA minMusikkBlackBorder"><a href="./minmusikk.html">Min musikk</a></li>
             </ul>
-            <button class="profileButton">Profil
-                <!--ICON-->
-            </button>
+            <button class="profileButton"><a href="./profile.html">Profil</a><!--ICON--></button>
         </nav>
     </header>
 
