--- a/minmusikk.html
+++ b/minmusikk.html
@@ -21,7 +21,7 @@
         </div>
         <nav class="navTop">
             <ul class="navTopUl">
-                <li class="coversLiA covereBlack"><a href="./covere.html">Covere</a></li>
+                <li class="coversLiA covereBlack"><a href="./index.html">Covere</a></li>
                 <li class="minMusikkLiA minMusikkGray"><a href="./minmusikk.html">Min musikk</a></li>
             </ul>
             <button class="profileButton"><a href="./profile.html">Profil</a><!---ICON---></button>
