--- a/profile.html
+++ b/profile.html
@@ -20,7 +20,7 @@
         </div>
         <nav class="navTop navTopBorder">
             <ul class="navTopUl">
-                <li class="coversLiA covereBlackBorder"><a href="./covere.html">Covere</a></li>
+                <li class="coversLiA covereBlackBorder"><a href="./index.html">Covere</a></li>
                 <li class="minMusikkLiA minMusikkBlackBorder"><a href="./minmusikk.html">Min musikk</a></li>
             </ul>
             <button class="profileButton"><a href="./profile.html">Profil</a><!--ICON--></button>
