--- a/minmusikk.html
+++ b/minmusikk.html
@@ -24,7 +24,7 @@
                 <li class="coversLiA covereBlack"><a href="./index.html">Covere</a></li>
                 <li class="minMusikkLiA minMusikkGray"><a href="./minmusikk.html">Min musikk</a></li>
             </ul>
-            <button class="profileButton"><a href="./profile.html">Profil</a><!---ICON---></button>
+            <button class="profileButton"><a href="./profile.html">Profil</a></button>
         </nav>
     </header>
 
