--- a/profile.html
+++ b/profile.html
@@ -24,7 +24,7 @@
                 <li class="coversLiA covereBlackBorder"><a href="./index.html">Covere</a></li>
                 <li class="minMusikkLiA minMusikkBlackBorder"><a href="./minmusikk.html">Min musikk</a></li>
             </ul>
-            <button class="profileButton"><a href="./profile.html">Profil</a><!--ICON--></button>
+            <button class="profileButton"><a href="./profile.html">Profil</a></button>
         </nav>
     </header>
 
