--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <li class="coversLiA covereGray"><a href="./covere.html">Covere</a></li>
                 <li class="minMusikkLiA minMusikkBlack"><a href="./minmusikk.html">Min musikk</a></li>
             </ul>
-            <button class="profileButton"><a href="./profile.html">Profil</a><!--ICON--></button>
+            <button class="profileButton"><a href="./profile.html">Profil</a></button>
         </nav>
     </header>
 
